All_Component_DX/force-app/main/default/objects/Mileage_Tiers__c/Mileage_Tiers__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Volume tires pricing for travel on work order pricing</description>
    <label>Mileage Tier</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mileage Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>