All_Component_DX/force-app/main/default/objects/Mileage_Tiers__c/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <label>Minimum</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>