All_Component_DX/force-app/main/default/objects/Mileage_Tiers__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipName>Mileage_Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>